svc_dp_blog.yml
---
# svc-shop
apiVersion: v1
kind: Service
metadata:
  name: svc-blog                  # 이 이름이 rule에 정의된 shop의 name과 같아야 함
spec:
  selector:
    app: blog
  ports:
  - port: 80
    targetPort: 80
# type을 정하지 않으면 기본적으로 cluster-ip로 연결되고, 이걸 사용하기 위해 type 작성하지 않음

---
# dp-shop
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
spec:
  replicas: 3
  selector:
    matchLabels:
      app: blog                      # 무조건 shop으로 해야함, 이 친구가 pod에 라벨인데, 위에 서비스 부분에 selector가 shop으로 정의 되어 있기 때문에 service로 보내려면 동일해야함
  template:                          # pod에 대한 정의
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: blog
        image: kimcity0205/portal:blog
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
